add detail